Next release
============

- Fix inaccuracies and import errors in bfgwiki (traversal+ZODB) and
  bfgwiki2 (urldispatch+SA) tutorials.

- Use bfgsite index for all tutorial setup.cfg files.

1.0b1 (2009-07-02)
==================

Features
--------

- Allow a Paste config file (``configure_zcml``) value or an
  environment variable (``BFG_CONFIGURE_ZCML``) to name a ZCML file
  (optionally package-relative) that will be used to bootstrap the
  application.  Previously, the integrator could not influence which
  ZCML file was used to do the boostrapping (only the original
  application developer could do so).

Documentation
-------------

- Added a "Resources" chapter to the narrative documentation which
  explains how to override resources within one package from another
  package.

- Added an "Extending" chapter to the narrative documentation which
  explains how to extend or modify an existing BFG application using
  another Python package and ZCML.

1.0a9 (2009-07-01)
==================

Features
--------

- Make it possible to pass strings in the form
  "package_name:relative/path" to APIs like ``render_template``,
  ``render_template_to_response``, and ``get_template``.  Sometimes
  the package in which a caller lives is a direct namespace package,
  so the module which is returned is semi-useless for navigating from.
  In this way, the caller can control the horizontal and vertical of
  where things get looked up from.

1.0a8 (2009-07-01)
==================

Deprecations
------------

- Deprecate the ``authentication_policy`` and ``authorization_policy``
  arguments to ``repoze.bfg.router.make_app``.  Instead, developers
  should use the various authentication policy ZCML directives
  (``repozewho1authenticationpolicy``,
  ``remoteuserauthenticationpolicy`` and
  ``authtktauthenticationpolicy``) and the `aclauthorizationpolicy``
  authorization policy directive as described in the changes to the